--- a/test/integration/docker-compose-dotnet.yml
+++ b/test/integration/docker-compose-dotnet.yml
@@ -16,9 +16,9 @@ services:
   autoinstrumenter:
     build:
       context: ../..
-      dockerfile: ./test/integration/components/beyla/Dockerfile${INSTRUMENT_DOCKERFILE_SUFFIX}
+      dockerfile: ./test/integration/components/ebpf-instrument/Dockerfile${INSTRUMENT_DOCKERFILE_SUFFIX}
     entrypoint:
-      - /beyla${INSTRUMENT_COMMAND_SUFFIX}
+      - /ebpf-instrument${INSTRUMENT_COMMAND_SUFFIX}
     command:
       - --config=/configs/instrumenter-config-java.yml
     volumes:
