--- a/test/integration/components/ebpf-instrument/Dockerfile_dbg
+++ b/test/integration/components/ebpf-instrument/Dockerfile_dbg
@@ -7,6 +7,10 @@ ARG TARGETARCH
 
 ENV GOARCH=$TARGETARCH
 
+WORKDIR /
+
+COPY test/integration/components/ebpf-instrument/ebpf_instrument_wrapper.sh /ebpf_instrument_wrapper.sh
+
 WORKDIR /src
 
 # Copy the go manifests and source
@@ -22,10 +26,12 @@ COPY Makefile Makefile
 # Build
 RUN make compile-for-coverage
 
-# Create final image from minimal + built binary
 FROM scratch
 
-WORKDIR /
-COPY --from=builder /src/bin/beyla .
+# Copy the native executable into the containers
+COPY --from=builder /src/bin/ebpf-instrument /ebpf-instrument
+COPY --from=builder /ebpf_instrument_wrapper.sh /ebpf_instrument_wrapper.sh
 
-ENTRYPOINT [ "/beyla" ]
+WORKDIR /
+
+ENTRYPOINT [ "/ebpf_instrument_wrapper.sh" ]
