Enhance security of github actions (#24)
* Enhance security of github actions

* Check security of actions via zizmor

* Fix zizmor

--- a/.github/workflows/pull_request_integration_tests.yml
+++ b/.github/workflows/pull_request_integration_tests.yml
@@ -6,6 +6,14 @@ on:
   pull_request:
     branches: [ 'main', 'release-*' ]
 
+permissions:
+  contents: read
+  # Required for codecov
+  checks: write
+  pull-requests: write
+  # Required for uploading artifacts
+  actions: write
+
 jobs:
   test:
     name: test
@@ -14,11 +22,14 @@ jobs:
       matrix:
         go: [ '1.24' ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
+        with:
+          persist-credentials: false
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@be3c94b385c4f180051c996d336f57a34c397495 # v3
         with:
           go-version: ${{ matrix.go }}
+          cache: 'false'
       - name: Clean up disk space
         run: |
           docker system prune -af
@@ -27,7 +38,7 @@ jobs:
         run: make docker-generate integration-test
         timeout-minutes: 60
       - name: Upload integration test logs
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         if: always()
         with:
           name: Test Logs
@@ -35,7 +46,7 @@ jobs:
             testoutput/*.log
             testoutput/kind
       - name: Report coverage
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
