--- a/.github/workflows/clang-tidy-check.yml
+++ b/.github/workflows/clang-tidy-check.yml
@@ -6,14 +6,18 @@ on:
   pull_request:
     branches: [ 'main', 'release-*' ]
 
+permissions:
+  contents: read
+
 jobs:
   clang-tidy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
+        with:
+          persist-credentials: false
       - name: Install clang-tidy
         run: |
           sudo apt-get update
@@ -25,4 +29,3 @@ jobs:
       - name: Check Clang Tidy
         run: |
           CLANG_TIDY=clang-tidy-19 make clang-tidy
-
