--- a/.github/workflows/pull_request_check_license.yml
+++ b/.github/workflows/pull_request_check_license.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ 'main', 'release-*' ]
 
+permissions:
+  contents: read
+
 jobs:
   check-licenses:
     name: check-licenses
@@ -14,10 +17,13 @@ jobs:
       matrix:
         go: [ '1.24' ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
+        with:
+          persist-credentials: false
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@be3c94b385c4f180051c996d336f57a34c397495 # v3
         with:
           go-version: ${{ matrix.go }}
+          cache: 'false'
       - name: Check licenses
         run: make check-licenses
