--- a/.github/workflows/pull_request_integration_tests_vm_6.10_x86_64.yml
+++ b/.github/workflows/pull_request_integration_tests_vm_6.10_x86_64.yml
@@ -8,9 +8,16 @@ on:
     branches: [ 'main', 'release-*' ]
     paths: [ 'bpf/**' ]
 
+permissions:
+  contents: read
+  checks: write
+  pull-requests: write
+  actions: write
+
 jobs:
   test:
     uses: ./.github/workflows/workflow_integration_tests_vm.yml
     with:
       arch: x86_64
       kernel-version: 6.10.6
+      timeout-minutes: 90
