--- a/.github/workflows/workflow_integration_tests_vm.yml
+++ b/.github/workflows/workflow_integration_tests_vm.yml
@@ -16,6 +16,15 @@ on:
         required: false
         type: number
         default: 60
+
+permissions:
+  contents: read
+  # Required for codecov
+  checks: write
+  pull-requests: write
+  # Required for uploading artifacts
+  actions: write
+
 jobs:
   test:
     name: test
@@ -24,7 +33,9 @@ jobs:
       matrix:
         go: [ '1.22' ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        with:
+          persist-credentials: false
       - name: Clean up disk space
         run: |
           docker system prune -af
@@ -36,10 +47,13 @@ jobs:
       - name: Run VM integration tests
         run: |
           make docker-generate
-          sudo make -C test/vm KERNEL_VER=${{ inputs.kernel-version }} ARCH=${{ inputs.arch }} && [ -f testoutput/success ]
+          sudo make -C test/vm KERNEL_VER=${KERNEL_VERSION} ARCH=${ARCH} && [ -f testoutput/success ]
+        env:
+          ARCH: ${{ inputs.arch }}
+          KERNEL_VERSION: ${{ inputs.kernel-version }}
         timeout-minutes: ${{ inputs.timeout-minutes }}
       - name: Upload integration test logs
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         if: always()
         with:
           name: Test Logs
@@ -47,9 +61,11 @@ jobs:
             testoutput/*.log
             testoutput/kind
       - name: Report coverage
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          ARCH: ${{ inputs.arch }}
+          KERNEL_VERSION: ${{ inputs.kernel-version }}
         with:
           file: ./testoutput/itest-covdata.txt
-          flags: integration-test-vm-${{ inputs.arch }}-${{ inputs.kernel-version }}
+          flags: integration-test-vm-${ARCH}-${KERNEL_VERSION}
