Discovery configuration: replace regular expressions by "globs" (#31)
* Move regexp config to Globs

* Fix some integration test service selectors

* Fix the configuration of exe_path in integration tests

* Test Php-fpm integration tests

* fix some k8s tests

--- a/test/integration/configs/instrumenter-config-grpc-http2-mux.yml
+++ b/test/integration/configs/instrumenter-config-grpc-http2-mux.yml
@@ -11,7 +11,7 @@ discovery:
   services:
     - namespace: grpc-http2-go
       name: server
-      exe_path: testserver
+      exe_path: "*testserver*"
 attributes:
   select:
     "*":
