--- a/test/integration/docker-compose-java.yml
+++ b/test/integration/docker-compose-java.yml
@@ -30,7 +30,7 @@ services:
       GOCOVERDIR: "/coverage"
       OTEL_EBPF_TRACE_PRINTER: "text"
       OTEL_EBPF_OPEN_PORT: "${JAVA_OPEN_PORT}"
-      OTEL_EBPF_EXECUTABLE_NAME: "${JAVA_EXECUTABLE_NAME}"
+      OTEL_EBPF_EXECUTABLE_PATH: "${JAVA_EXECUTABLE_PATH}"
       OTEL_EBPF_SYSTEM_WIDE: "${OTEL_EBPF_SYSTEM_WIDE}"
       OTEL_SERVICE_NAME: "${OTEL_SERVICE_NAME}"
       OTEL_EBPF_SERVICE_NAMESPACE: "integration-test"
