--- a/test/integration/k8s/manifests/06-instrumented-client-prom.template.yml
+++ b/test/integration/k8s/manifests/06-instrumented-client-prom.template.yml
@@ -65,8 +65,8 @@ spec:
           value: "500ms"
         - name: OTEL_EBPF_TRACE_PRINTER
           value: "text"
-        - name: OTEL_EBPF_EXECUTABLE_NAME
-          value: "httppinger"
+        - name: OTEL_EBPF_EXECUTABLE_PATH
+          value: "*httppinger"
         - name: OTEL_EBPF_METRICS_INTERVAL
           value: "10ms"
         - name: OTEL_EBPF_BPF_BATCH_TIMEOUT
