Remove routes > ignored_patterns configuration option (#33)
* Remove routes > ignored_patterns configuration option

* Fix integration test

--- a/test/integration/configs/instrumenter-config-no-route.yml
+++ b/test/integration/configs/instrumenter-config-no-route.yml
@@ -1,7 +1,9 @@
 routes:
-  ignored_patterns:
-    - /metrics
   unmatched: heuristic
+filter:
+  application:
+    url_path:
+      not_match: /metrics
 otel_metrics_export:
   endpoint: http://otelcol:4318
 otel_traces_export:
