--- a/test/integration/configs/instrumenter-config.yml
+++ b/test/integration/configs/instrumenter-config.yml
@@ -1,10 +1,11 @@
 routes:
   patterns:
     - /basic/:rnd
-  ignored_patterns:
-    - /metrics
-  ignore_mode: traces
   unmatched: path
+filter:
+  application:
+    url_path:
+      not_match: /metrics
 otel_metrics_export:
   endpoint: http://otelcol:4318
 otel_traces_export:
