--- a/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
@@ -24,9 +24,11 @@ data:
     routes:
       patterns:
         - /pingpong
-      ignored_patterns:
-        - /metrics
       unmatched: path
+    filter:
+      application:
+        url_path:
+          not_match: /metrics
     otel_metrics_export:
       endpoint: http://otelcol:4318
     otel_traces_export:
