--- a/test/integration/k8s/manifests/06-beyla-netolly-dropexternal.yml
+++ b/test/integration/k8s/manifests/06-beyla-netolly-dropexternal.yml
@@ -9,7 +9,7 @@ data:
         enable: true
         drop_external: true
         resource_labels:
-          deployment.environment: ["deployment.environment"]
+          deployment.environment: ["${DEPLOYMENT_ENVIRONMENT:-error-not-replaced}"]
       select:
         beyla.network.flow.bytes:
           include:
@@ -77,3 +77,6 @@ spec:
               value: "10ms"
             - name: OTEL_EBPF_KUBE_CLUSTER_NAME
               value: "beyla"
+            # expecting to be replaced during the configuration YAML load
+            - name: DEPLOYMENT_ENVIRONMENT
+              value: "deployment.environment"
