--- a/.github/workflows/update-offsets.yml
+++ b/.github/workflows/update-offsets.yml
@@ -24,6 +24,11 @@ jobs:
         check-latest: true
     - name: "Update offsets"
       run: make update-offsets
+    - uses: actions/create-github-app-token@v1
+      id: generate-token
+      with:
+        app-id: ${{ vars.OTELBOT_APP_ID }}
+        private-key: ${{ secrets.OTELBOT_PRIVATE_KEY }}
     - name: "Create/update PR"
       uses: peter-evans/create-pull-request@4e1beaa7521e8b457b572c090b25bd3db56bf1c5 # v5.0.3
       with:
@@ -31,6 +36,10 @@ jobs:
         title: Automatic update of offsets.json
         body: The offsets have been updated by go-offsets-tracker
         base: main
-        branch: offset-content-auto-update
+        branch: otelbot/offset-content-auto-update
         labels: automated-pr
         delete-branch: true
+        committer: otelbot <197425009+otelbot@users.noreply.github.com>
+        author: otelbot <197425009+otelbot@users.noreply.github.com>
+        token: ${{ steps.generate-token.outputs.token }}
+        sign-commits: true
