Support k8s.job.name and k8s.cronjob.name attributes (#46)
* add owner support for job and cronjob

* fix integration test

---------

Co-authored-by: Mario Macias <mario.macias@grafana.com>

--- a/test/integration/k8s/manifests/06-beyla-daemonset.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset.yml
@@ -17,6 +17,8 @@ data:
         # used in the k8s_owners_*_test.go
         - k8s_statefulset_name: statefulservice
         - k8s_daemonset_name: dsservice
+        - k8s_job_name: jobservice
+        - k8s_cronjob_name: cronjobservice
       exclude_services:
         # testing service exclusion, by expecting that K8s discovery only picks the "otherinstance"
         # deployment (ignoring the "testserver" in the other pod)
