Fix update offsets automation

--- a/.github/workflows/update-offsets.yml
+++ b/.github/workflows/update-offsets.yml
@@ -33,7 +33,7 @@ jobs:
         # not using secrets.GITHUB_TOKEN since pull requests from that token do not run workflows
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
       run: |
-        message="Automatic update of offsets.json
+        message="Automatic update of offsets.json"
         body="The offsets have been updated by go-offsets-tracker"
         branch="otelbot/offset-content-auto-update"
 
