Temporarily restore regular expression usage in service selector (#96)
* Temporarily restore regular expression usage in service selector

* fix some remaining globs

* Fixing more integration tests configs

* fix tctracer conflict

* Fix more test config

--- a/test/integration/configs/instrumenter-config-http2.yml
+++ b/test/integration/configs/instrumenter-config-http2.yml
@@ -11,11 +11,11 @@ discovery:
   services:
     - namespace: http2-go
       name: client
-      exe_path: "*http2client"
+      exe_path: "http2client"
       containers_only: true
     - namespace: http2-go
       name: server
-      exe_path: "*http2srv"
+      exe_path: "http2srv"
       containers_only: true
 attributes:
   select:
