--- a/test/integration/k8s/manifests/06-beyla-external-informer.yml
+++ b/test/integration/k8s/manifests/06-beyla-external-informer.yml
@@ -38,8 +38,8 @@ data:
     log_level: debug
     discovery:
       services:
-        - k8s_deployment_name: "{otherinstance,testserver}"
-        - k8s_pod_name: "*pinger*"
+        - k8s_deployment_name: "(otherinstance|testserver)"
+        - k8s_pod_name: "pinger"
 ---
 apiVersion: apps/v1
 kind: DaemonSet
