--- a/test/integration/k8s/manifests/06-instrumented-client.template.yml
+++ b/test/integration/k8s/manifests/06-instrumented-client.template.yml
@@ -66,7 +66,7 @@ spec:
         - name: OTEL_EBPF_TRACE_PRINTER
           value: "text"
         - name: OTEL_EBPF_EXECUTABLE_PATH
-          value: "*httppinger"
+          value: "httppinger"
         - name: OTEL_EBPF_METRICS_INTERVAL
           value: "10ms"
         - name: OTEL_EBPF_BPF_BATCH_TIMEOUT
