Deprecating "discovery > services" and adding the new "discovery > instrument" section (#114)
* add discovery > instrument section

* matcher findingcriteria: deal with conflicts in deprecated sections

* Unit tests for matcher

* Minor format tweaks

* changing some integration tests to use the new section

* Fix docker-old test

* Replace services by instrument in tests

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -49,6 +49,13 @@ linters:
           - govet
         text: shadow
 
+      # exclude deprecated API usage errors. If we deprecate some properties is because we don't want to remove them
+      # (hide/undocument them, but keep supporting them until the next major version)
+      - path: .*
+        linters:
+          - staticcheck
+        text: "SA1019:"
+
       # TODO: enable
       - path: .*
         linters:
