--- a/test/integration/docker-compose-1.17.yml
+++ b/test/integration/docker-compose-1.17.yml
@@ -35,7 +35,7 @@ services:
       OTEL_EBPF_OTEL_METRICS_FEATURES: "application,application_span"
       OTEL_EBPF_OPEN_PORT: "${OTEL_EBPF_OPEN_PORT}"
       OTEL_EBPF_DISCOVERY_POLL_INTERVAL: 500ms
-      OTEL_GO_AUTO_TARGET_EXE: "${OTEL_EBPF_EXECUTABLE_PATH}"
+      OTEL_GO_AUTO_TARGET_EXE: "${OTEL_GO_AUTO_TARGET_EXE}"
       OTEL_EBPF_SERVICE_NAMESPACE: "integration-test"
       OTEL_EBPF_METRICS_INTERVAL: "10ms"
       OTEL_EBPF_BPF_BATCH_TIMEOUT: "10ms"
