--- a/test/integration/k8s/manifests/06-beyla-daemonset.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset.yml
@@ -11,18 +11,18 @@ data:
           deployment.environment: ["deployment.environment"]
     log_level: debug
     discovery:
-      services:
+      instrument:
         # name and namespace will be automatically set from the K8s metadata
-        - k8s_deployment_name: "(otherinstance|testserver)"
+        - k8s_deployment_name: "{otherinstance,testserver}"
         # used in the k8s_owners_*_test.go
         - k8s_statefulset_name: statefulservice
         - k8s_daemonset_name: dsservice
         - k8s_job_name: jobservice
         - k8s_cronjob_name: cronjobservice
-      exclude_services:
+      exclude_instrument:
         # testing service exclusion, by expecting that K8s discovery only picks the "otherinstance"
         # deployment (ignoring the "testserver" in the other pod)
-        - k8s_deployment_name: testserver        
+        - k8s_deployment_name: "testserver"        
     routes:
       patterns:
         - /pingpong
